Make logs a state property

--- a/src/containers/App.scss
+++ b/src/containers/App.scss
@@ -78,7 +78,8 @@
 
   .logs {
     display: flex;
-    margin-left: -300px;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
   }
 }
